output/facebook/rocksdb/53.txt
I tried to compile rocksdb under ubuntu 13.04(32bit OS) but failed with the errors:

```
rocksdb ) make
g++ -g -Wall -Werror -I. -I./include -std=gnu++11   -lpthread -lrt -DROCKSDB_FALLOCATE_PRESENT -DSNAPPY -DZLIB -DBZIP2   -DHAVE_JEMALLOC -O2 -fno-omit-frame-pointer -momit-leaf-frame-pointer -Woverloaded-virtual -c db/builder.cc -o db/builder.o 
In file included from ./db/dbformat.h:18:0,
             from db/builder.cc:13:
./util/coding.h: In function ‘uint32_t rocksdb::DecodeFixed32(const char*)’:
./util/coding.h:70:7: error: ‘port’ has not been declared
   if (port::kLittleEndian) {
       ^
./util/coding.h: In function ‘uint64_t rocksdb::DecodeFixed64(const char*)’:
./util/coding.h:84:7: error: ‘port’ has not been declared
if (port::kLittleEndian) {
    ^
./util/coding.h:94:1: error: control reaches end of non-void function [-Werror=return-type]
}
^
cc1plus: all warnings being treated as errors
make: *** [db/builder.o] Error 1
```

BTW, my gcc version is 4.8.1, anyone can help let me know how to solve the problem ?

